<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Tips</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome to Study Jam</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="navigation_drawer_items_array">
        <item>Whatsapp Help</item>
        <item>Recharge Mobile</item>
        <item>Book Cab</item>
        <item>Book Flight Ticket</item>
        <item>Settings</item>

    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="whatsapp_fragment">WhatsApp Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="recharge_fragment">Recharge fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="book_cab_fragment">Book Cab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="book_ticket_fragment">Book a ticket</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="settings_fragment">Settings fragment</string>

    <string name="whatsapp_line1">1.Download and install WhatsApp from your device\'s app store by searching for it. </string>

    <string name="whatsapp_line2">2.Allow WhatsApp to access your contacts and send you push notifications. </string>

    <string name="whatsapp_line3">3.Enter your phone number. This is how people find you on WhatsApp. </string>

    <string name="whatsapp_line4">4.Find a friend to chat with by searching for their name. </string>

    <string name="recharge_mob_line1">1.Go to your service provider like airtel.com</string>
    <string name="recharge_mob_line2">2.Enter your phone no.</string>
    <string name="recharge_mob_line3">3.Select the pack.</string>
    <string name="recharge_mob_line4">4.Pay the money.</string>

    <string name="book_cab_line1">1.Register with ola.</string>

    <string name="book_cab_line2">2.Choose cab type from among the list.</string>

    <string name="book_cab_line3">3.Put the location if different from current location.</string>

    <string name="book_cab_line4">4.Book the cab.</string>

    <string name="book_ticket_line1">1.Goto makemytrip app or website.</string>

    <string name="book_ticket_line2">2.Enter the source and destination.</string>

    <string name="book_ticket_line3">3.Enter date and class type.</string>

    <string name="book_ticket_line4">4.Book suitable flight from available list.</string>

    <string name="or_text">OR </string>

    <string name="settings_line1">1.Mobile Data can be turned on and off.</string>
    <string name="settings_line2">2.Ringtone can be set.</string>
    <string name="settings_line3">3.Wifi,Bluetooth,hotspot can be handled here.</string>
    <string name="settings_line4">4.Security settings can be modified here.</string>









</resources>